@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2017 IBM Corporation and others.
+ * Copyright (c) 2000, 2006 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -10,26 +10,13 @@
  *******************************************************************************/
 package org.eclipse.ui.forms.examples.internal.rcp;
 
-import org.eclipse.jface.viewers.ISelection;
-import org.eclipse.jface.viewers.IStructuredSelection;
+import org.eclipse.jface.viewers.*;
 import org.eclipse.swt.SWT;
-import org.eclipse.swt.events.SelectionAdapter;
-import org.eclipse.swt.events.SelectionEvent;
-import org.eclipse.swt.events.SelectionListener;
-import org.eclipse.swt.layout.GridData;
-import org.eclipse.swt.layout.GridLayout;
-import org.eclipse.swt.widgets.Button;
-import org.eclipse.swt.widgets.Composite;
-import org.eclipse.swt.widgets.Label;
-import org.eclipse.swt.widgets.Text;
-import org.eclipse.ui.forms.IDetailsPage;
-import org.eclipse.ui.forms.IFormPart;
-import org.eclipse.ui.forms.IManagedForm;
-import org.eclipse.ui.forms.widgets.FormText;
-import org.eclipse.ui.forms.widgets.FormToolkit;
-import org.eclipse.ui.forms.widgets.Section;
-import org.eclipse.ui.forms.widgets.TableWrapData;
-import org.eclipse.ui.forms.widgets.TableWrapLayout;
+import org.eclipse.swt.events.*;
+import org.eclipse.swt.layout.*;
+import org.eclipse.swt.widgets.*;
+import org.eclipse.ui.forms.*;
+import org.eclipse.ui.forms.widgets.*;
 
 /**
  * @author dejan
@@ -50,11 +37,15 @@ public class TypeOneDetailsPage implements IDetailsPage {
 
 	public TypeOneDetailsPage() {
 	}
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.forms.IDetailsPage#initialize(org.eclipse.ui.forms.IManagedForm)
+	 */
 	public void initialize(IManagedForm mform) {
 		this.mform = mform;
 	}
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.forms.IDetailsPage#createContents(org.eclipse.swt.widgets.Composite)
+	 */
 	public void createContents(Composite parent) {
 		TableWrapLayout layout = new TableWrapLayout();
 		layout.topMargin = 5;
@@ -80,7 +71,6 @@ public class TypeOneDetailsPage implements IDetailsPage {
 		//client.setBackground(client.getDisplay().getSystemColor(SWT.COLOR_CYAN));
 
 		SelectionListener choiceListener = new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				Integer value = (Integer)e.widget.getData();
 				if (input!=null) {
@@ -92,7 +82,7 @@ public class TypeOneDetailsPage implements IDetailsPage {
 		choices = new Button[TypeOne.CHOICES.length];
 		for (int i=0; i<TypeOne.CHOICES.length; i++) {
 			choices[i] = toolkit.createButton(client, TypeOne.CHOICES[i], SWT.RADIO);
-			choices[i].setData(Integer.valueOf(i));
+			choices[i].setData(new Integer(i));
 			choices[i].addSelectionListener(choiceListener);
 			gd = new GridData();
 			gd.horizontalSpan = 2;
@@ -101,7 +91,6 @@ public class TypeOneDetailsPage implements IDetailsPage {
 		createSpacer(toolkit, client, 2);
 		flag = toolkit.createButton(client, "Value of the flag property", SWT.CHECK);
 		flag.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				if (input!=null)
 					input.setFlag(flag.getSelection());
@@ -114,9 +103,11 @@ public class TypeOneDetailsPage implements IDetailsPage {
 
 		toolkit.createLabel(client, "Text property:");
 		text = toolkit.createText(client, "", SWT.SINGLE);
-		text.addModifyListener(e -> {
-			if (input != null)
-				input.setText(text.getText());
+		text.addModifyListener(new ModifyListener() {
+			public void modifyText(ModifyEvent e) {
+				if (input!=null)
+					input.setText(text.getText());
+			}
 		});
 		gd = new GridData(GridData.FILL_HORIZONTAL|GridData.VERTICAL_ALIGN_BEGINNING);
 		gd.widthHint = 10;
@@ -146,7 +137,9 @@ public class TypeOneDetailsPage implements IDetailsPage {
 		flag.setSelection(input!=null && input.getFlag());
 		text.setText(input!=null && input.getText()!=null?input.getText():"");
 	}
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.forms.IDetailsPage#inputChanged(org.eclipse.jface.viewers.IStructuredSelection)
+	 */
 	public void selectionChanged(IFormPart part, ISelection selection) {
 		IStructuredSelection ssel = (IStructuredSelection)selection;
 		if (ssel.size()==1) {
@@ -156,29 +149,37 @@ public class TypeOneDetailsPage implements IDetailsPage {
 			input = null;
 		update();
 	}
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.forms.IDetailsPage#commit()
+	 */
 	public void commit(boolean onSave) {
 	}
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.forms.IDetailsPage#setFocus()
+	 */
 	public void setFocus() {
 		choices[0].setFocus();
 	}
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.forms.IDetailsPage#dispose()
+	 */
 	public void dispose() {
 	}
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.forms.IDetailsPage#isDirty()
+	 */
 	public boolean isDirty() {
 		return false;
 	}
-	@Override
 	public boolean isStale() {
 		return false;
 	}
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.forms.IDetailsPage#refresh()
+	 */
 	public void refresh() {
 		update();
 	}
-	@Override
 	public boolean setFormInput(Object input) {
 		return false;
 	}
